feat: create booking by current user login
